--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,37 @@
 # volumes:
 #   static_volume:
 
+# services:
+#   django:
+#     image: my-dockerhub-username/my-django-image:latest
+#     container_name: django_container
+#     volumes:
+#       - static_volume:/app/static
+#     command: ["gunicorn", "--bind", "0.0.0.0:8000", "config.wsgi:application"]
+#     networks:
+#       - my_network
+    
+#   nginx:
+#     build: /root/server/nginx
+#     container_name: nginx_container
+#     ports:
+#       - "80:80"
+#     depends_on:
+#       - django
+#     volumes:
+#       - static_volume:/app/static
+#       - /root/server/nginx:/etc/nginx/conf.d
+#     networks:
+#       - my_network
+
+
+version: '3'
+
 services:
   django:
-    image: my-dockerhub-username/my-django-image:latest
+    build: 
+      context: /home/admin/server/django
+      dockerfile: Dockerfile
     container_name: django_container
     volumes:
       - static_volume:/app/static
@@ -43,7 +71,7 @@ services:
       - my_network
     
   nginx:
-    build: /root/server/nginx
+    build: /home/admin/server/nginx
     container_name: nginx_container
     ports:
       - "80:80"
@@ -51,6 +79,13 @@ services:
       - django
     volumes:
       - static_volume:/app/static
-      - /root/server/nginx:/etc/nginx/conf.d
+      - /home/admin/server/nginx:/etc/nginx/conf.d
     networks:
       - my_network
+
+networks:
+  my_network:
+    driver: bridge
+
+volumes:
+  static_volume:
